@@ -61,6 +61,10 @@ BUG FIXES
      Depend on data.table. Many thanks to a patch to .onLoad from Ken Williams, and related
      posts from Victor Kryukov :
 	     http://r.789695.n4.nabble.com/Import-problem-with-data-table-in-packages-tp4665958.html
+	     
+  o  Mixing adding and updating into one DT[, `:=`(existingCol=...,newCol=...), by=...] now works
+     without error or segfault, #2778 and #2528. Many thanks to Arunkumar Srinivasan for both with
+     reproducible examples. 
 
 USER VISIBLE CHANGES
 
@@ -91,7 +95,7 @@ NOTES
      And a pointer to ?truelength has been added to an error message as sugggested and thanks to Roland :
        http://stackoverflow.com/questions/15436356/potential-problems-from-over-allocating-truelength-more-than-1000-times
         
-  o  There are now 967 raw tests, as reported by test.data.table().
+  o  There are now 982 raw tests, as reported by test.data.table().
     
              
         *********************************************
